--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jsdom": "^16.2.11",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
+    "image-size": "^1.0.0",
     "jsdom": "^16.6.0"
   }
 }
