cropping size to poster ratio

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "image-size": "^1.0.0",
-    "jsdom": "^16.6.0"
+    "jsdom": "^16.6.0",
+    "sharp": "^0.28.3"
   }
 }
