--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^4.1.1",
     "image-size": "^1.0.0",
     "jsdom": "^16.6.0",
+    "lodash": "^4.17.21",
     "sharp": "^0.28.3"
   }
 }
